--- a/trunk/Softimage/QPop/help/index.htm
+++ b/trunk/Softimage/QPop/help/index.htm
@@ -18,30 +18,30 @@
 </HEAD>
 <BODY LANG="de-AT" TEXT="#000000" DIR="LTR">
 <P CLASS="western" ALIGN=CENTER STYLE="margin-bottom: 0cm; line-height: 100%">
-<FONT SIZE=4><U><B>QPop for Softimage</B></U></FONT></P>
+<FONT SIZE=4><U><B>QMenu for Softimage</B></U></FONT></P>
 <P CLASS="western" ALIGN=CENTER STYLE="margin-bottom: 0cm; font-weight: normal; line-height: 100%; text-decoration: none">
 <FONT SIZE=3>Stefan Kubicek &amp; Eugen Sares</FONT></P>
 <P CLASS="western" ALIGN=CENTER STYLE="margin-bottom: 0cm; line-height: 100%">
 <BR>
 </P>
 <P CLASS="western" ALIGN=LEFT STYLE="margin-bottom: 0cm; line-height: 100%">
-<A HREF="http://www.tidbit-images.com/tools/xsi/qpop/QpopConfigurator_MainSettings.jpg"><IMG SRC="http://www.tidbit-images.com/tools/xsi/qpop/QpopConfigurator_MainSettings.jpg" NAME="graphics1" ALIGN=BOTTOM WIDTH=680 HEIGHT=454 BORDER=0></A>
+<A HREF="http://www.tidbit-images.com/tools/xsi/QMenu/QMenuConfigurator_MainSettings.jpg"><IMG SRC="http://www.tidbit-images.com/tools/xsi/QMenu/QMenuConfigurator_MainSettings.jpg" NAME="graphics1" ALIGN=BOTTOM WIDTH=680 HEIGHT=454 BORDER=0></A>
  
 </P>
 <P CLASS="western" ALIGN=LEFT STYLE="margin-bottom: 0cm; font-weight: normal; line-height: 100%">
-QPop is a custom quad-menu system for Softimage similar to 3dsMax's
+QMenu is a custom quad-menu system for Softimage similar to 3dsMax's
 quad menu system. The goal  is to create a quad menu system that can
 be configured in a user friendly way. That is: through clicking only.</P>
 <P CLASS="western" ALIGN=LEFT STYLE="margin-bottom: 0cm; line-height: 100%">
 <BR>
 </P>
 <P CLASS="western" ALIGN=LEFT STYLE="margin-bottom: 0cm; font-weight: normal; line-height: 100%">
-To keep QPop as flexible as possible, several aspects of QPop are
+To keep QMenu as flexible as possible, several aspects of QMenu are
 script based so that is easily extendable without having to change
 the actual plugin source code. 
 </P>
 <P CLASS="western" ALIGN=LEFT STYLE="margin-bottom: 0cm; font-weight: normal; line-height: 100%">
-When QPop will be released, a large enough set of existing
+When QMenu will be released, a large enough set of existing
 configuration scripts should exist so that the casual user can use it
 without ever having to script anything. At that point it shall
 provide the same ease of use as 3dsMax's quad menu system.</P>
@@ -57,7 +57,7 @@ provide the same ease of use as 3dsMax's quad menu system.</P>
 <BR>
 </P>
 <P CLASS="western" ALIGN=LEFT STYLE="margin-bottom: 0cm; font-weight: normal; line-height: 100%">
-<U>Qpop Views</U></P>
+<U>QMenu Views</U></P>
 <P CLASS="western" ALIGN=LEFT STYLE="margin-left: 1.25cm; margin-bottom: 0cm; font-weight: normal; line-height: 100%">
 Each window and view in Softimage can have it's own menu set (s) (see
 below on menu sets). Theoretically an unlimited amount of menu sets
@@ -69,13 +69,13 @@ enough. This number can be increased easily whenever needed.</P>
 <P CLASS="western" ALIGN=LEFT STYLE="margin-left: 1.25cm; margin-bottom: 0cm; font-weight: normal; line-height: 100%">
 Menu set invocation is command based &ndash; Currently we have four
 commands implemented to display menu set 0 -3 per view
-(QpopDisplayMenuSet_1 to QpopDisplayMenuSet_3, assignable to hot
+(QMenuDisplayMenuSet_1 to QMenuDisplayMenuSet_3, assignable to hot
 keys)</P>
 <P CLASS="western" ALIGN=LEFT STYLE="margin-bottom: 0cm; line-height: 100%">
 <BR>
 </P>
 <P CLASS="western" ALIGN=LEFT STYLE="margin-bottom: 0cm; font-weight: normal; line-height: 100%">
-<U>QPop Menu Sets</U></P>
+<U>QMenu Menu Sets</U></P>
 <P CLASS="western" ALIGN=LEFT STYLE="margin-left: 1.25cm; margin-bottom: 0cm; font-weight: normal; line-height: 100%">
 A menu set can contain any number of menus, of which alyways a
 maximum of four main menus (besides their submenus ) are displayed.
@@ -87,7 +87,7 @@ because no menu was assigned to them in the current context and view.</P>
 <BR>
 </P>
 <P CLASS="western" ALIGN=LEFT STYLE="margin-bottom: 0cm; font-weight: normal; line-height: 100%">
-<U>QPop Display Contexts</U></P>
+<U>QMenu Display Contexts</U></P>
 <P CLASS="western" ALIGN=LEFT STYLE="margin-left: 1.25cm; margin-bottom: 0cm; font-weight: normal; line-height: 100%">
 These are user-editable scripts assigned to menu sets which evaluate
 to True or False. All scripting languages are supported. 
@@ -113,22 +113,22 @@ matter. This order can be changed at any time.
 <BR>
 </P>
 <P CLASS="western" ALIGN=LEFT STYLE="margin-bottom: 0cm; font-weight: normal; line-height: 100%">
-<U>QPop Menus</U></P>
+<U>QMenu Menus</U></P>
 <P CLASS="western" ALIGN=LEFT STYLE="margin-left: 1.25cm; margin-bottom: 0cm; font-weight: normal; line-height: 100%">
-A Qpop menu contains the actual menu items a user can click.</P>
+A QMenu menu contains the actual menu items a user can click.</P>
 <P CLASS="western" ALIGN=LEFT STYLE="margin-left: 1.25cm; margin-bottom: 0cm; font-weight: normal; line-height: 100%">
 Menu items can be:</P>
 <UL>
 	<LI><P CLASS="western" ALIGN=LEFT STYLE="margin-bottom: 0cm; font-weight: normal; line-height: 100%">
 	Softimage commands (native or custom)</P>
 	<LI><P CLASS="western" ALIGN=LEFT STYLE="margin-bottom: 0cm; font-weight: normal; line-height: 100%">
-	Other Qpop menus, which are displayed as sub-menus (but no native
+	Other QMenu menus, which are displayed as sub-menus (but no native
 	Softimage menus (yet?))</P>
 	<LI><P CLASS="western" ALIGN=LEFT STYLE="margin-bottom: 0cm; font-weight: normal; line-height: 100%">
 	Scripted menu items (all scripting languages supported)</P>
 </UL>
 <P CLASS="western" ALIGN=LEFT STYLE="margin-left: 2.5cm; margin-bottom: 0cm; font-weight: normal; line-height: 100%">
-Qpop menus can contain fixed menu items that are saved to the config
+QMenu menus can contain fixed menu items that are saved to the config
 file, and temporary menu items which do not get saved. A menu may
 have associated script code (all scripting languages supported) which
 gets executed before the menu is displayed. This is useful to fill in
@@ -144,10 +144,10 @@ file by accident once it is saved.</P>
 <P CLASS="western" ALIGN=LEFT STYLE="margin-bottom: 0cm; font-weight: normal; line-height: 100%">
 <U>Command repetition</U></P>
 <P CLASS="western" ALIGN=LEFT STYLE="margin-left: 1.25cm; margin-bottom: 0cm; font-weight: normal; line-height: 100%; text-decoration: none">
-To repeat the last operation performed by Qpop the command
-&bdquo;QpopRepeatLastCommand&ldquo; can be bound to a hotkey.
+To repeat the last operation performed by QMenu the command
+&bdquo;QMenuRepeatLastCommand&ldquo; can be bound to a hotkey.
 Alternatively, the last command can be repeated by clicking on one of
-the quad menus's menu titles. Currently, the last executed Qpop menu
+the quad menus's menu titles. Currently, the last executed QMenu menu
 item is repeated independant of the clicked menu title the user
 clicks. In future versions, this could be changed so that the last
 executed menu item of the respective menu's title upon which the user
@@ -158,7 +158,7 @@ has clicked, is executed (3dsMax-style).</P>
 <P CLASS="western" ALIGN=LEFT STYLE="margin-bottom: 0cm; font-weight: normal; line-height: 100%">
 <U>Saveable configuration</U></P>
 <P CLASS="western" ALIGN=LEFT STYLE="margin-left: 1.25cm; margin-bottom: 0cm; font-weight: normal; line-height: 100%; text-decoration: none">
-At any time the current Qpop configuration can be saved to an xml
+At any time the current QMenu configuration can be saved to an xml
 file. 
 </P>
 <P CLASS="western" ALIGN=LEFT STYLE="margin-left: 1.25cm; margin-bottom: 0cm; font-weight: normal; line-height: 100%; text-decoration: none">
@@ -186,32 +186,32 @@ users.</P>
 </P>
 <P CLASS="western" ALIGN=LEFT STYLE="margin-left: 1.25cm; margin-bottom: 0cm; font-weight: normal; line-height: 100%; text-decoration: none">
 <FONT SIZE=3>Make sure Python with pywin and Mocrosoft's .NET 3.5
-framework are installed on your machine. (Qpop menu rendering makes
-use of .Net, the Qpop Configurator is written in Python and uses some
+framework are installed on your machine. (QMenu menu rendering makes
+use of .Net, the QMenu Configurator is written in Python and uses some
 pywin functions)</FONT></P>
 <P CLASS="western" ALIGN=LEFT STYLE="margin-bottom: 0cm; font-weight: normal; line-height: 100%; text-decoration: none">
 <FONT SIZE=3>2.) </FONT>
 </P>
 <P CLASS="western" ALIGN=LEFT STYLE="margin-left: 1.25cm; margin-bottom: 0cm; line-height: 100%">
 <SPAN STYLE="text-decoration: none"><FONT SIZE=3><SPAN STYLE="font-weight: normal">Download
-the xsi addon </SPAN></FONT></SPAN><FONT COLOR="#000080"><SPAN LANG="zxx"><U><A HREF="http://www.tidbit-images.com/tools/xsi/qpop/QPopPreview_20090905.xsiaddon"><SPAN STYLE="text-decoration: none"><FONT SIZE=3><SPAN STYLE="font-weight: normal">Qpop
-&amp; QpopConfigurator (right-click to save linked content as...) </SPAN></FONT></SPAN></A></U></SPAN></FONT><FONT SIZE=3><SPAN STYLE="font-weight: normal">and
+the xsi addon </SPAN></FONT></SPAN><FONT COLOR="#000080"><SPAN LANG="zxx"><U><A HREF="http://www.tidbit-images.com/tools/xsi/QMenu/QMenuPreview_20090905.xsiaddon"><SPAN STYLE="text-decoration: none"><FONT SIZE=3><SPAN STYLE="font-weight: normal">QMenu
+&amp; QMenuConfigurator (right-click to save linked content as...) </SPAN></FONT></SPAN></A></U></SPAN></FONT><FONT SIZE=3><SPAN STYLE="font-weight: normal">and
 install it, e.g. through drag &amp; drop into XSI.</SPAN></FONT></P>
 <P CLASS="western" ALIGN=LEFT STYLE="margin-bottom: 0cm; font-weight: normal; line-height: 100%">
 <FONT SIZE=3>3.)</FONT></P>
 <P CLASS="western" ALIGN=LEFT STYLE="margin-left: 1.25cm; margin-bottom: 0cm; font-weight: normal; line-height: 100%">
 <FONT SIZE=3>Start Softimage and, click
-File-&gt;Preferences...-&gt;Custom-&gt;QPop to open the
-QpopConfigurator PPG.</FONT></P>
+File-&gt;Preferences...-&gt;Custom-&gt;QMenu to open the
+QMenuConfigurator PPG.</FONT></P>
 <P CLASS="western" ALIGN=LEFT STYLE="margin-left: 1.25cm; margin-bottom: 0cm; font-weight: normal; line-height: 100%">
 <FONT SIZE=3>Note: We've seen display problems with complex PPG's
 displayed inside the Preferences window.</FONT></P>
 <P CLASS="western" ALIGN=LEFT STYLE="margin-left: 1.25cm; margin-bottom: 0cm; font-weight: normal; line-height: 100%">
-<FONT SIZE=3>If the QPop PPG looks corrupted after having been
-resized, click on the orange custom preference icon left of the Qpop
-entry to open the Qpop configurator in a separate property page
+<FONT SIZE=3>If the QMenu PPG looks corrupted after having been
+resized, click on the orange custom preference icon left of the QMenu
+entry to open the QMenu configurator in a separate property page
 independant of the preferences window. But be careful not to open 2
-instances of the qpop preferences, neither separate nor inside
+instances of the QMenu preferences, neither separate nor inside
 another preferences window. This would cause an update cycle. This is
 currently a limitation.</FONT></P>
 <P CLASS="western" ALIGN=LEFT STYLE="margin-left: 1.25cm; margin-bottom: 0cm; font-weight: normal; line-height: 100%">
@@ -229,10 +229,10 @@ problem (stefan@tidbit-images.com)</FONT></P>
 <P CLASS="western" ALIGN=LEFT STYLE="margin-bottom: 0cm; font-weight: normal; line-height: 100%">
 <FONT SIZE=3>4.)</FONT></P>
 <P CLASS="western" ALIGN=LEFT STYLE="margin-left: 1.25cm; margin-bottom: 0cm; font-weight: normal; line-height: 100%">
-<FONT SIZE=3>Optional, but recommened for a start: Set the Qpop
+<FONT SIZE=3>Optional, but recommened for a start: Set the QMenu
 Configuration file path to the provided demo configuration file at</FONT></P>
 <P CLASS="western" ALIGN=LEFT STYLE="margin-left: 1.25cm; margin-bottom: 0cm; font-weight: normal; line-height: 100%">
-<FONT SIZE=3>C:\users\&lt;YourUserName&gt;\Autodesk\Softimage_7.5\Addons\QPop\Data\Preferences\QPopConfiguration_Default.xml</FONT></P>
+<FONT SIZE=3>C:\users\&lt;YourUserName&gt;\Autodesk\Softimage_7.5\Addons\QMenu\Data\Preferences\QMenuConfiguration_Default.xml</FONT></P>
 <P CLASS="western" ALIGN=LEFT STYLE="margin-left: 1.25cm; margin-bottom: 0cm; font-weight: normal; line-height: 100%">
 <FONT SIZE=3>and load the file by pressing the &bdquo;Load&ldquo;
 button left of the file path. It file contains some demo menus and
@@ -241,7 +241,7 @@ contexts defined for the main 3D Views.</FONT></P>
 <BR>
 </P>
 <P CLASS="western" ALIGN=LEFT STYLE="margin-left: 1.25cm; margin-bottom: 0cm; font-weight: normal; line-height: 100%">
-<FONT SIZE=3>Update: Qpop should find the default config xml at first
+<FONT SIZE=3>Update: QMenu should find the default config xml at first
 startup automatically now. Please let me know if it does not
 (stefan@tidbit-images.com).</FONT></P>
 <P CLASS="western" ALIGN=LEFT STYLE="margin-bottom: 0cm; line-height: 100%">
@@ -251,8 +251,8 @@ startup automatically now. Please let me know if it does not
 <FONT SIZE=3>5.) </FONT>
 </P>
 <P CLASS="western" ALIGN=LEFT STYLE="margin-left: 1.25cm; margin-bottom: 0cm; font-weight: normal; line-height: 100%">
-<FONT SIZE=3>Assign the QPopDisplayMenuSet_0 command to a hotkey of
-your choice. You could do the same for QpopDisplayMenuSet_1 &ndash;
+<FONT SIZE=3>Assign the QMenuDisplayMenuSet_0 command to a hotkey of
+your choice. You could do the same for QMenuDisplayMenuSet_1 &ndash;
 3, but it is unlikely you will need them yet. </FONT>
 </P>
 <P CLASS="western" ALIGN=LEFT STYLE="margin-bottom: 0cm; line-height: 100%">
@@ -262,23 +262,23 @@ your choice. You could do the same for QpopDisplayMenuSet_1 &ndash;
 <BR>
 </P>
 <P CLASS="western" ALIGN=LEFT STYLE="margin-bottom: 0cm; font-weight: normal; line-height: 100%">
-<FONT SIZE=3><U>Testing your Qpop installation</U></FONT></P>
+<FONT SIZE=3><U>Testing your QMenu installation</U></FONT></P>
 <P CLASS="western" ALIGN=LEFT STYLE="margin-bottom: 0cm; line-height: 100%">
 <BR>
 </P>
 <P CLASS="western" ALIGN=LEFT STYLE="margin-bottom: 0cm; font-weight: normal; line-height: 100%; text-decoration: none">
-<FONT SIZE=3>If you had no errors so far it is very likely that Qpop
+<FONT SIZE=3>If you had no errors so far it is very likely that QMenu
 will work.</FONT></P>
 <P CLASS="western" ALIGN=LEFT STYLE="margin-bottom: 0cm; font-weight: normal; line-height: 100%; text-decoration: none">
 <FONT SIZE=3>To do a quick test, create any polymesh object, move
 your mouse over one of the 3D views and press the hotkey associated
-with the QpopDisplayMenuSet_0 command.</FONT></P>
+with the QMenuDisplayMenuSet_0 command.</FONT></P>
 <P CLASS="western" ALIGN=LEFT STYLE="margin-bottom: 0cm; font-weight: normal; line-height: 100%; text-decoration: none">
 <FONT SIZE=3>A menu should come up that looks smilar to the one
 visible in the illustration on the top of this page.</FONT></P>
 <P CLASS="western" ALIGN=LEFT STYLE="margin-bottom: 0cm; font-weight: normal; line-height: 100%; text-decoration: none">
 <FONT SIZE=3>Select one or more points on the mesh, and invoke the
-Qpop menu as before. A different menu showing some commands relevant
+QMenu menu as before. A different menu showing some commands relevant
 to point editing should become visible.</FONT></P>
 <P CLASS="western" ALIGN=LEFT STYLE="margin-bottom: 0cm; line-height: 100%">
 <BR>
@@ -297,7 +297,7 @@ please write an email to </SPAN></FONT></SPAN><FONT COLOR="#000080"><SPAN LANG="
 <BR>
 </P>
 <P CLASS="western" ALIGN=CENTER STYLE="margin-bottom: 0cm; line-height: 100%">
-<FONT SIZE=4><U><B>Configuring QPop</B></U></FONT></P>
+<FONT SIZE=4><U><B>Configuring QMenu</B></U></FONT></P>
 <P CLASS="western" ALIGN=LEFT STYLE="margin-bottom: 0cm; line-height: 100%">
 <BR>
 </P>
@@ -323,17 +323,17 @@ WIP</P>
 <BR>
 </P>
 <P CLASS="western" ALIGN=LEFT STYLE="margin-bottom: 0cm; font-weight: normal; line-height: 100%; text-decoration: none">
-<FONT SIZE=3>QPop consists of two components</FONT></P>
+<FONT SIZE=3>QMenu consists of two components</FONT></P>
 <OL>
 	<LI><P CLASS="western" ALIGN=LEFT STYLE="margin-bottom: 0cm; font-weight: normal; line-height: 100%; text-decoration: none">
-	<FONT SIZE=3>Qpop.dll  C++ plugin by Eugen Sares, compiled for both
+	<FONT SIZE=3>QMenu.dll  C++ plugin by Eugen Sares, compiled for both
 	Softimage 7.5 &ndash; 32 and 64 bit.</FONT></P>
 </OL>
 <P CLASS="western" ALIGN=LEFT STYLE="margin-left: 1.25cm; margin-bottom: 0cm; font-weight: normal; line-height: 100%; text-decoration: none">
 <FONT SIZE=3>A version for Softimage 7.0 will also be available
 later.</FONT></P>
 <P CLASS="western" ALIGN=LEFT STYLE="margin-bottom: 0cm; font-weight: normal; line-height: 100%; text-decoration: none">
-<FONT SIZE=3>This plugin implements the Qpop command, which renders
+<FONT SIZE=3>This plugin implements the QMenu command, which renders
 the menu set described by a string. It returns the menu number and
 item number clicked by the user.</FONT></P>
 <P CLASS="western" ALIGN=LEFT STYLE="margin-bottom: 0cm; line-height: 100%">
@@ -341,7 +341,7 @@ item number clicked by the user.</FONT></P>
 </P>
 <OL START=2>
 	<LI><P CLASS="western" ALIGN=LEFT STYLE="margin-bottom: 0cm; font-weight: normal; line-height: 100%; text-decoration: none">
-	<FONT SIZE=3>The QpopConfigurator.py Python plugin by Stefan
+	<FONT SIZE=3>The QMenuConfigurator.py Python plugin by Stefan
 	Kubicek, which allows for menu configuration and deals with
 	interpreting and executing menu items etc. It embeds the
 	configurator as a PPG in custom preferences.</FONT></P>
